# FRESHEM_3D_interpolation

./: .gitignore  README.md  _utils.py  config.yaml  main.py  pyproject.toml
scripts/: OLD_preprocessing.py  _postproc_helper.py  _preprocessing_helper.py  _read_and_write.py  _utils.py  config_loader.py  ml.py  postproc.py  preproc_data.py  preproc_grid.py  preproc_ml.py  preprocessing.py  readers.py  visualisation.py  xval.py
